backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-backend
  namespace: securebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securebank-backend
  template:
    metadata:
      labels:
        app: securebank-backend
    spec:
      containers:
        - name: securebank-backend
          image: yigitsancar/securebank:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: securebank-backend
  namespace: securebank
spec:
  type: NodePort
  selector:
    app: securebank-backend
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
