ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securebank-ingress
  namespace: securebank
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: securebank-backend
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securebank-frontend
                port:
                  number: 80
